[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/GUI.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="StyleBoxFlat" id=2]

[sub_resource type="StyleBoxFlat" id=3]

[sub_resource type="StyleBoxFlat" id=4]

[sub_resource type="StyleBoxFlat" id=5]

[node name="Control" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="CheckButton" parent="."]
margin_right = 147.0
margin_bottom = 40.0
pressed = true
text = "Show Gui: "

[node name="TabContainer" type="TabContainer" parent="."]
margin_left = 46.0
margin_top = 50.0
margin_right = 442.0
margin_bottom = 580.0
tab_align = 0

[node name="Creature" type="ScrollContainer" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Panel" type="Panel" parent="TabContainer/Creature"]
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Panel" type="Panel" parent="TabContainer/Creature/Panel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 291.0
margin_bottom = 250.0
custom_styles/panel = SubResource( 1 )

[node name="Label2" type="Label" parent="TabContainer/Creature/Panel/Panel"]
margin_left = 37.0
margin_top = 45.0
margin_right = 183.0
margin_bottom = 59.0
text = "Mass: "

[node name="Label3" type="Label" parent="TabContainer/Creature/Panel/Panel"]
margin_left = 37.0
margin_top = 75.0
margin_right = 183.0
margin_bottom = 89.0
text = "Radius: "

[node name="Label4" type="Label" parent="TabContainer/Creature/Panel/Panel"]
margin_left = 37.0
margin_top = 175.0
margin_right = 183.0
margin_bottom = 189.0
text = "Number to Create: "

[node name="Button" type="Button" parent="TabContainer/Creature/Panel/Panel"]
margin_left = 219.0
margin_top = 212.0
margin_right = 272.0
margin_bottom = 232.0
text = "Create"

[node name="LineEdit" type="LineEdit" parent="TabContainer/Creature/Panel/Panel"]
margin_left = 95.0
margin_top = 46.0
margin_right = 153.0
margin_bottom = 70.0

[node name="LineEdit2" type="LineEdit" parent="TabContainer/Creature/Panel/Panel"]
margin_left = 97.0
margin_top = 77.0
margin_right = 155.0
margin_bottom = 101.0

[node name="LineEdit3" type="LineEdit" parent="TabContainer/Creature/Panel/Panel"]
margin_left = 169.0
margin_top = 175.0
margin_right = 227.0
margin_bottom = 199.0

[node name="Label5" type="Label" parent="TabContainer/Creature/Panel/Panel"]
margin_left = 37.0
margin_top = 115.0
margin_right = 153.0
margin_bottom = 129.0
text = "Movement Force: "

[node name="LineEdit4" type="LineEdit" parent="TabContainer/Creature/Panel/Panel"]
margin_left = 159.0
margin_top = 115.0
margin_right = 217.0
margin_bottom = 139.0

[node name="Label6" type="Label" parent="TabContainer/Creature/Panel/Panel"]
margin_left = 2.0
margin_top = 3.0
margin_right = 283.0
margin_bottom = 35.0
text = "Create a bunch of creatures at random locations in the world."
autowrap = true

[node name="Panel2" type="Panel" parent="TabContainer/Creature/Panel"]
margin_left = 10.0
margin_top = 258.0
margin_right = 293.0
margin_bottom = 458.0
custom_styles/panel = SubResource( 1 )

[node name="Label2" type="Label" parent="TabContainer/Creature/Panel/Panel2"]
margin_left = 37.0
margin_top = 45.0
margin_right = 183.0
margin_bottom = 59.0
text = "Mass: "

[node name="Label3" type="Label" parent="TabContainer/Creature/Panel/Panel2"]
margin_left = 37.0
margin_top = 75.0
margin_right = 183.0
margin_bottom = 89.0
text = "Radius: "

[node name="Button" type="Button" parent="TabContainer/Creature/Panel/Panel2"]
margin_left = 210.0
margin_top = 170.0
margin_right = 263.0
margin_bottom = 190.0
text = "Create"

[node name="LineEdit" type="LineEdit" parent="TabContainer/Creature/Panel/Panel2"]
margin_left = 95.0
margin_top = 46.0
margin_right = 153.0
margin_bottom = 70.0

[node name="LineEdit2" type="LineEdit" parent="TabContainer/Creature/Panel/Panel2"]
margin_left = 97.0
margin_top = 77.0
margin_right = 155.0
margin_bottom = 101.0

[node name="Label5" type="Label" parent="TabContainer/Creature/Panel/Panel2"]
margin_left = 37.0
margin_top = 115.0
margin_right = 153.0
margin_bottom = 129.0
text = "Movement Force: "

[node name="LineEdit4" type="LineEdit" parent="TabContainer/Creature/Panel/Panel2"]
margin_left = 159.0
margin_top = 115.0
margin_right = 217.0
margin_bottom = 139.0

[node name="Label6" type="Label" parent="TabContainer/Creature/Panel/Panel2"]
margin_left = 2.0
margin_top = 3.0
margin_right = 283.0
margin_bottom = 35.0
text = "Create a single creature at a time by clicking in the world."
autowrap = true

[node name="World" type="ScrollContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Panel" type="Panel" parent="TabContainer/World"]

[node name="Panel" type="Panel" parent="TabContainer/World/Panel"]
margin_left = 8.0
margin_top = 58.0
margin_right = 358.0
margin_bottom = 218.0
custom_styles/panel = SubResource( 2 )

[node name="Label" type="Label" parent="TabContainer/World/Panel/Panel"]
margin_left = 6.0
margin_top = 12.0
margin_right = 121.0
margin_bottom = 26.0
text = "Food"

[node name="Label2" type="Label" parent="TabContainer/World/Panel/Panel"]
margin_left = 24.0
margin_top = 41.0
margin_right = 139.0
margin_bottom = 55.0
text = "Number to create: "

[node name="Label3" type="Label" parent="TabContainer/World/Panel/Panel"]
margin_left = 24.0
margin_top = 65.0
margin_right = 145.0
margin_bottom = 79.0
text = "Delay (seconds): "

[node name="LineEdit" type="LineEdit" parent="TabContainer/World/Panel/Panel"]
margin_left = 164.0
margin_top = 30.0
margin_right = 222.0
margin_bottom = 54.0

[node name="LineEdit2" type="LineEdit" parent="TabContainer/World/Panel/Panel"]
margin_left = 164.0
margin_top = 60.0
margin_right = 222.0
margin_bottom = 84.0

[node name="Button" type="Button" parent="TabContainer/World/Panel/Panel"]
margin_left = 164.0
margin_top = 96.0
margin_right = 222.0
margin_bottom = 116.0
text = "Update"

[node name="Button2" type="Button" parent="TabContainer/World/Panel/Panel"]
margin_left = 34.0
margin_top = 134.0
margin_right = 113.0
margin_bottom = 154.0
text = "Paint Food"

[node name="Panel2" type="Panel" parent="TabContainer/World/Panel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 358.0
margin_bottom = 46.0
custom_styles/panel = SubResource( 2 )

[node name="Label" type="Label" parent="TabContainer/World/Panel/Panel2"]
margin_left = 6.0
margin_top = 12.0
margin_right = 121.0
margin_bottom = 26.0
text = "Time scale: "

[node name="Label2" type="Label" parent="TabContainer/World/Panel/Panel2"]
margin_left = 314.0
margin_top = 12.0
margin_right = 429.0
margin_bottom = 26.0
text = "1x"

[node name="HSlider" type="HSlider" parent="TabContainer/World/Panel/Panel2"]
margin_left = 89.0
margin_top = 10.0
margin_right = 296.0
margin_bottom = 32.0
min_value = 1.0
max_value = 10.0
step = 0.25
value = 1.0

[node name="Panel3" type="Panel" parent="TabContainer/World/Panel"]
margin_left = 8.0
margin_top = 228.0
margin_right = 358.0
margin_bottom = 354.0
custom_styles/panel = SubResource( 3 )

[node name="Label" type="Label" parent="TabContainer/World/Panel/Panel3"]
margin_left = 6.0
margin_top = 10.0
margin_right = 54.0
margin_bottom = 24.0
text = "Bounds"

[node name="Label2" type="Label" parent="TabContainer/World/Panel/Panel3"]
margin_left = 54.0
margin_top = 36.0
margin_right = 102.0
margin_bottom = 50.0
text = "Width: "

[node name="Label3" type="Label" parent="TabContainer/World/Panel/Panel3"]
margin_left = 54.0
margin_top = 66.0
margin_right = 104.0
margin_bottom = 80.0
text = "Height: "

[node name="LineEdit" type="LineEdit" parent="TabContainer/World/Panel/Panel3"]
margin_left = 121.0
margin_top = 26.0
margin_right = 179.0
margin_bottom = 50.0

[node name="LineEdit2" type="LineEdit" parent="TabContainer/World/Panel/Panel3"]
margin_left = 121.0
margin_top = 60.0
margin_right = 179.0
margin_bottom = 84.0

[node name="Button" type="Button" parent="TabContainer/World/Panel/Panel3"]
margin_left = 234.0
margin_top = 96.0
margin_right = 292.0
margin_bottom = 116.0
text = "Update"

[node name="Stats" type="ScrollContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Panel" type="Panel" parent="TabContainer/Stats"]

[node name="Panel" type="Panel" parent="TabContainer/Stats/Panel"]
margin_top = -2.0
margin_right = 380.0
margin_bottom = 152.0
custom_styles/panel = SubResource( 4 )

[node name="Label" type="Label" parent="TabContainer/Stats/Panel/Panel"]
margin_left = 10.0
margin_top = 13.0
margin_right = 72.0
margin_bottom = 27.0
text = "Statistics:"

[node name="Label2" type="Label" parent="TabContainer/Stats/Panel/Panel"]
margin_left = 32.0
margin_top = 36.0
margin_right = 123.0
margin_bottom = 50.0
text = "average mass:"

[node name="Label3" type="Label" parent="TabContainer/Stats/Panel/Panel"]
margin_left = 32.0
margin_top = 60.0
margin_right = 128.0
margin_bottom = 74.0
text = "average radius:"

[node name="Label4" type="Label" parent="TabContainer/Stats/Panel/Panel"]
margin_left = 32.0
margin_top = 85.0
margin_right = 165.0
margin_bottom = 99.0
text = "average move force::"

[node name="Label5" type="Label" parent="TabContainer/Stats/Panel/Panel"]
margin_left = 180.0
margin_top = 36.0
margin_right = 313.0
margin_bottom = 50.0
text = "asdfas"

[node name="Label6" type="Label" parent="TabContainer/Stats/Panel/Panel"]
margin_left = 180.0
margin_top = 56.0
margin_right = 313.0
margin_bottom = 70.0
text = "asdfas"

[node name="Label7" type="Label" parent="TabContainer/Stats/Panel/Panel"]
margin_left = 180.0
margin_top = 80.0
margin_right = 313.0
margin_bottom = 94.0
text = "asdfas"

[node name="Label9" type="Label" parent="TabContainer/Stats/Panel/Panel"]
margin_left = 180.0
margin_top = 110.0
margin_right = 313.0
margin_bottom = 124.0
text = "asdfas"

[node name="Label8" type="Label" parent="TabContainer/Stats/Panel/Panel"]
margin_left = 32.0
margin_top = 110.0
margin_right = 165.0
margin_bottom = 124.0
text = "food density: "

[node name="Panel2" type="Panel" parent="TabContainer/Stats/Panel"]
margin_top = 168.0
margin_right = 380.0
margin_bottom = 303.0
custom_styles/panel = SubResource( 5 )

[node name="Label" type="Label" parent="TabContainer/Stats/Panel/Panel2"]
margin_left = 8.0
margin_top = 6.0
margin_right = 211.0
margin_bottom = 20.0
text = "Statistics for selected creature: "

[node name="Label2" type="Label" parent="TabContainer/Stats/Panel/Panel2"]
margin_left = 32.0
margin_top = 29.0
margin_right = 74.0
margin_bottom = 43.0
text = "mass: "

[node name="Label3" type="Label" parent="TabContainer/Stats/Panel/Panel2"]
margin_left = 32.0
margin_top = 49.0
margin_right = 79.0
margin_bottom = 63.0
text = "radius: "

[node name="Label4" type="Label" parent="TabContainer/Stats/Panel/Panel2"]
margin_left = 32.0
margin_top = 69.0
margin_right = 146.0
margin_bottom = 83.0
text = "movement force: "

[node name="Label5" type="Label" parent="TabContainer/Stats/Panel/Panel2"]
margin_left = 32.0
margin_top = 90.0
margin_right = 188.0
margin_bottom = 104.0
text = "num of creatures killed: "

[node name="Label6" type="Label" parent="TabContainer/Stats/Panel/Panel2"]
margin_left = 32.0
margin_top = 110.0
margin_right = 188.0
margin_bottom = 124.0
text = "num children spawned: "

[node name="Label7" type="Label" parent="TabContainer/Stats/Panel/Panel2"]
margin_left = 90.0
margin_top = 30.0
margin_right = 246.0
margin_bottom = 44.0
text = "asdf"

[node name="Label8" type="Label" parent="TabContainer/Stats/Panel/Panel2"]
margin_left = 90.0
margin_top = 50.0
margin_right = 246.0
margin_bottom = 64.0
text = "asdf"

[node name="Label9" type="Label" parent="TabContainer/Stats/Panel/Panel2"]
margin_left = 160.0
margin_top = 69.0
margin_right = 316.0
margin_bottom = 83.0
text = "asdf"

[node name="Label10" type="Label" parent="TabContainer/Stats/Panel/Panel2"]
margin_left = 200.0
margin_top = 90.0
margin_right = 356.0
margin_bottom = 104.0
text = "asdf"

[node name="Label11" type="Label" parent="TabContainer/Stats/Panel/Panel2"]
margin_left = 200.0
margin_top = 110.0
margin_right = 356.0
margin_bottom = 124.0
text = "asdf"

[node name="Button" type="Button" parent="TabContainer/Stats/Panel/Panel2"]
margin_left = 260.0
margin_top = 10.0
margin_right = 369.0
margin_bottom = 30.0
text = "Select Creature"
